เพิ่มฟังก์ชันค้นหาสินค้าแบบเรียลไทม์

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <h2 class="text-center">📦 ระบบจัดการคลังสินค้า</h2>
         <div class="form-group">
-        <!-- ค้นหาสินค้า -->
+            <input type="text" id="searchInput" class="form-control" placeholder="🔍 ค้นหาสินค้า..." onkeyup="searchProduct()">
         </div>
         <!-- แสดงข้อความเวลาที่อัปเดตล่าสุด -->
         <p id="lastUpdated">⏳ อัปเดตล่าสุด: - </p>
