เพิ่มปุ่มล้างข้อมูลสินค้า

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <!-- แสดงข้อความเวลาที่อัปเดตล่าสุด -->
         <p id="lastUpdated">⏳ อัปเดตล่าสุด: - </p>
-        <!-- ปุ่มล้างข้อมูลคลังสินค้า -->
+        <button onclick="clearAllData()" class="btn btn-danger">🔄 ล้างข้อมูลคลัง</button>
         <!-- 🛒 ฟอร์มเพิ่มสินค้า -->
         <div class="card mt-4">
             <div class="card-body">
