--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <div class="card-body">
                 <h3>🛒 เพิ่มสินค้า</h3>
                 <div class="form-group">
-                    <!-- ช่องป้อนข้อมูลชื่อสินค้า -->
+                    <input type="text" id="productName" class="form-control" placeholder="ชื่อสินค้า">
                 </div>
                 <div class="form-group">
-                    <!-- ช่องป้อนข้อมูลราคา -->
+                    <input type="number" id="productPrice" class="form-control" placeholder="ราคา">
                 </div>
                 <div class="form-group">
-                    <!-- ช่องป้อนข้อมูลจำนวน -->
+                    <input type="number" id="productStock" class="form-control" placeholder="จำนวนคงเหลือ">
                 </div>
                 <div class="form-group">
                     <!-- เมนูเลือกประเภทสินค้า -->
