เพิ่ม dropdown หมวดหมู่

--- a/index.html
+++ b/index.html
@@ -32,7 +32,16 @@
                     <input type="number" id="productStock" class="form-control" placeholder="จำนวนคงเหลือ">
                 </div>
                 <div class="form-group">
-                    <!-- เมนูเลือกประเภทสินค้า -->
+                    <select id="productCategory" class="form-control">
+                        <option value="อิเล็กทรอนิกส์">อิเล็กทรอนิกส์</option>
+                        <option value="แฟชั่น">แฟชั่น</option>
+                        <option value="เครื่องใช้ในบ้าน">เครื่องใช้ในบ้าน</option>
+                        <option value="สุขภาพและความงาม">สุขภาพและความงาม</option>
+                        <option value="กีฬาและไลฟ์สไตล์">กีฬาและไลฟ์สไตล์</option>
+                        <option value="อุปกรณ์ไอที">อุปกรณ์ไอที</option>
+                        <option value="ของเล่น">ของเล่น</option>
+                        <option value="อาหารและเครื่องดื่ม">อาหารและเครื่องดื่ม</option>
+                    </select>                  
                 </div>
                 <!-- ปุ่มเพิ่มสินค้า -->
             </div>
