เพิ่มปุ่มเพิ่มสินค้า

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <option value="อาหารและเครื่องดื่ม">อาหารและเครื่องดื่ม</option>
                     </select>                  
                 </div>
-                <!-- ปุ่มเพิ่มสินค้า -->
+                <button onclick="addProduct()" class="btn btn-primary">เพิ่มสินค้า</button>
             </div>
         </div>
         <!-- 📝 ฟอร์มแก้ไขสินค้า -->
