--- a/index.html
+++ b/index.html
@@ -50,16 +50,25 @@
         <div id="editForm">
             <h3>✏️ แก้ไขสินค้า</h3>
             <div class="form-group">
-                    <!-- ช่องป้อนข้อมูลชื่อสินค้า -->
+                <input type="text" id="editProductName" class="form-control" placeholder="ชื่อสินค้า">
             </div>
             <div class="form-group">
-                    <!-- ช่องป้อนข้อมูลราคา -->
-                </div>
+                <input type="number" id="editProductPrice" class="form-control" placeholder="ราคา">
+            </div>
             <div class="form-group">
-                    <!-- ช่องป้อนข้อมูลจำนวน -->
-                </div>
+                <input type="number" id="editProductStock" class="form-control" placeholder="จำนวนคงเหลือ">
+            </div>
             <div class="form-group">
-                    <!-- เมนูเลือกประเภทสินค้า -->
+                <select id="editProductCategory" class="form-control">
+                    <option value="อิเล็กทรอนิกส์">อิเล็กทรอนิกส์</option>
+                    <option value="แฟชั่น">แฟชั่น</option>
+                    <option value="เครื่องใช้ในบ้าน">เครื่องใช้ในบ้าน</option>
+                    <option value="สุขภาพและความงาม">สุขภาพและความงาม</option>
+                    <option value="กีฬาและไลฟ์สไตล์">กีฬาและไลฟ์สไตล์</option>
+                    <option value="อุปกรณ์ไอที">อุปกรณ์ไอที</option>
+                    <option value="ของเล่น">ของเล่น</option>
+                    <option value="อาหารและเครื่องดื่ม">อาหารและเครื่องดื่ม</option>
+                </select>            
             </div>
             <!-- ปุ่มบันทึก -->
             <!-- ปุ่มยกเลิก -->
