--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <option value="อาหารและเครื่องดื่ม">อาหารและเครื่องดื่ม</option>
                 </select>            
             </div>
-            <!-- ปุ่มบันทึก -->
-            <!-- ปุ่มยกเลิก -->
+            <button onclick="saveEditedProduct()" class="btn btn-outline-success">💾 บันทึก</button>
+            <button onclick="cancelEdit()" class="btn btn-outline-danger">❌ ยกเลิก</button>
         </div>
         <!-- ⚠️ สินค้าใกล้หมด -->
         <h3>⚠️ สินค้าใกล้หมด</h3>
